# firetower

./: .cursorignore  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  Dockerfile  LICENSE  README.md  cloudbuild.yaml  codecov.yml  config.ci.toml  config.example.toml  deploy.sh  docker-compose.db.yml  docker-compose.yml  main.py  manage.py  mypy.ini  nginx.conf  pyproject.toml  ruff.toml  slack-app-manifest.yaml  warden.toml
.github/workflows/: ci.yml  deploy.yml  warden.yml
devenv/: config.ini  sync.py
docker/: backend.Dockerfile  entrypoint.sh  static.Dockerfile
docs/superpowers/specs/: 2026-05-22-archive-stale-channels-design.md
firetower/: asgi.py  settings.py  urls.py  wsgi.py
firetower/incidents/: urls.py  views.py
frontend/: .env.example  .prettierignore  bunfig.toml  env.ts  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  stylelint.config.js  tsconfig.app.json  tsconfig.build.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  main.tsx  routeTree.gen.ts
frontend/src/components/: Avatar.tsx  Button.tsx  Calendar.tsx  Card.test.tsx  Card.tsx  ConfirmationDialog.test.tsx  ConfirmationDialog.tsx  DateRangePicker.tsx  DateTimePicker.tsx  EditableDateTimeField.tsx  EditablePill.test.tsx  EditablePill.tsx  EditableTags.test.tsx  EditableTags.tsx  EditableTextField.test.tsx  EditableTextField.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ErrorState.tsx  GetHelpLink.tsx  Input.tsx  Label.tsx  MultiSelect.tsx  Pill.test.tsx  Pill.tsx  Popover.tsx  Skeleton.tsx  Spinner.tsx  Tag.test.tsx  Tag.tsx  Tooltip.tsx
frontend/src/routes/: $incidentId.tsx  __root.tsx  index.test.tsx  index.tsx  queries.ts  types.ts
frontend/src/styles/: design-tokens.css  index.css
frontend/src/utils/: arrays.ts  cn.test.ts  cn.ts  downtime.test.ts  downtime.ts
frontend/utils/: matchers.d.ts  testing-library.ts
scripts/: import_jira_incidents.py
sdk/: pyproject.toml
sdk/src/firetower_sdk/: __init__.py  auth.py  client.py  enums.py  exceptions.py  utils.py
sdk/tests/: test_client.py  test_utils.py
src/: conftest.py
src/firetower/: asgi.py  config.py  health.py  settings.py  test_config.py  test_health.py  urls.py  wsgi.py
src/firetower/auth/: admin.py  apps.py  authentication.py  middleware.py  models.py  serializers.py  services.py  signals.py  startup.py  urls.py  validators.py  views.py
src/firetower/db_backend/: __init__.py  base.py
src/firetower/incidents/: admin.py  allocation.py  apps.py  filters.py  hooks.py  models.py  permissions.py  serializers.py  (+8 more)
(+220 files in other folders)
