[project]
name = "firetower"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.15.2",
    "google-cloud-logging>=3.11.4",
    "jira>=3.5.0",
    "psycopg[binary]>=3.2.11",
    "sentry-sdk[django]>=2.39.0",
    "slack-sdk>=3.31.0",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "isort>=6.0.1",
    "pyupgrade>=3.20.0",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "ruff>=0.12.11",
    "ty>=0.0.1a19",
]
prod = [
    "granian>=2.5.3",
]

[tool.isort]
profile = "black"
line_length = 100
lines_between_sections = 1

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "firetower.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
